--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,10 @@
     />
   </head>
   <body>
-    <h1 id="demo"></h1>
+    <h1 id="demo">Hello</h1>
+    <button class="btn">Hello</button>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    <script src="./script.js"></script>
+    <!-- <script src="./script.js"></script> -->
   </body>
 </html>
